# traylnks

./: .gitignore  README.md  prd.md  rust-toolchain.toml
.cargo/: config.toml
frontend/: index.html  settings.js  styles.css
sample_space/: simulate2 工作区.lnk
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  icon.rs  launch.rs  launch_windows.rs  lib.rs  main.rs  menu_tree.rs  state.rs  station.rs  tray.rs  watcher.rs
src-tauri/src/cloud/: aliyun.rs  mod.rs  provider.rs  service.rs  sync.rs  tokens.rs
tools/icon-gen/: Cargo.toml
tools/icon-gen/src/: main.rs
