[package]
name = "traylnks"
version = "0.1.1"
description = "Windows tray link launcher — filesystem is the config"
authors = ["TrayLnks"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "traylnks_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

notify = "6"
notify-debouncer-full = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
gethostname = "0.5"
parking_lot = "0.12"
log = "0.4"
thiserror = "2"
open = "5"

# Cloud sync (v0.2) — Aliyun Drive first, provider-pluggable.
# We pin reqwest to 0.12 (the transitive 0.13 in the wry stack renamed its TLS
# features and defaults to aws-lc-rs which is painful under cargo-xwin). 0.12's
# `rustls-tls` uses ring — cmake-free, cross-compiles cleanly to msvc. Async
# client (not blocking): Tauri dispatches sync commands on its tokio runtime,
# where reqwest::blocking would panic on runtime nesting.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
# keyring v3 ships NO backend by default — without `windows-native` the store is
# a no-op mock and tokens don't survive a restart. Enable the Windows backend
# (Credential Manager / DPAPI); it's cfg(windows)-gated inside the crate.
keyring = { version = "3", features = ["windows-native"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
filetime = "0.2"
# QR rendering (passport login returns text to encode, not an image).
# default-features = false: we render SVG from the module matrix ourselves,
# avoiding a hard dependency on the `image` crate for QR generation.
qrcode = { version = "0.14", default-features = false }

# Windows-only native launch + foreground-focus engine (ShellExecuteExW etc.).
# Target-gated so `cargo fmt`/`clippy`/`check` work on the Linux host too.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
